Python 정규표현식 문제 수정

--- a/PythonProblems/191121 정규표현식문제만들기.ipynb
+++ b/PythonProblems/191121 정규표현식문제만들기.ipynb
@@ -116,7 +116,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### 9. 이제 deadSet에 있는 사람들을 죽이고 살아남은 사람들의 명단을 출력하십시오."
+    "#### 9. 이제 deadSet에 있는 사람들을 죽이고 lifeList를 출력하십시오."
    ]
   },
   {
@@ -128,8 +128,7 @@
     "**어린날 경기도 놀이공원에서 폭행을 당했던 직소는 이에 원한을 삼았습니다.**<br>\n",
     "**따라서 살아남은 사람들 중 경기도에서 사는 사람들을 노예로 쓰기로 결정했습니다.**<br>\n",
     "**살아남은 사람들을 끌고가도록 직장을 바꿔주십시오.**<br>\n",
-    ">lifeList에서 사람들의 직장란에 있는 기존 값을 Encore로 바꿔주십시오.<br>\n",
-    ">서울사는 사람들은 모두 죽었습니다"
+    ">lifeList에서 사람들의 직장란에 있는 기존 값을 Encore로 바꿔주십시오.<br>"
    ]
   }
  ],
