191121 정규표현식문제만들기 문제 수정

--- a/PythonProblems/191121 정규표현식문제만들기.ipynb
+++ b/PythonProblems/191121 정규표현식문제만들기.ipynb
@@ -6,8 +6,8 @@
    "source": [
     "## 쏘우...\n",
     "**직소는 유년기 시절 가족과 함께 경기도에 있는 놀이공원에 가족 나들이를 갔었습니다.**<br>\n",
-    "**그곳에서 불량 청소년들에게 구타 당했던 기억이 굉장히 큰 트라우마가 되었고,<br> 그 기억을 잊지못한 직소는 당시 자신을 폭행한 불량배들에게 <font color=red>복수</font>를 계획합니다.**<br>\n",
-    "**위에 list에는 당시 직소를 구타한 <font color=red>불량배</font> 가 포함 되어있습니다.**<br>\n",
+    "**그곳에서 불량 청소년들에게 구타 당했던 기억이 굉장히 큰 트라우마가 되었고,<br> 그 기억을 잊지못한 직소는 당시 자신을 폭행한 불량배들에게 복수를 계획합니다.**<br>\n",
+    "**위에 list에는 당시 직소를 구타한 불량배가 포함 되어있습니다.**<br>\n",
     "**list에 있는 인물들은 여지껏 살고있는 지역에 변동이 없다고 합니다.**<br><br>\n",
     "\n",
     ">lifeList는 쏘우가 갖고놀 사람들 명단입니다.<br>\n",
